--- a/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
@@ -19,54 +19,112 @@
 		
 			<vbox hflex="1" />
 			
-			<vbox hflex="20" pack="center" 
-			 	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.configuration.vm.ConfigVM')">
-				
-				<listbox model="@load(vm.configList)"
-					id="configList"
-					hflex="1"
-					style="margin-top: 20px;"
-					mold="paging"
-					pageSize="10"
-					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-					class="listbox" >
-			        
-			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.name')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.value')}" align="left" />
-			            <listheader width="50px" align="center" >
-			            	<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
-			            </listheader>
-			        </listhead>
-			         
-			        <template name="model">
-			            <listitem>
-			                <listcell label="${each.description}" />
-			                <listcell>
-		                		<listbox selectedItem="@bind(each.value)" 
-									model="@load(vm.courseYearList)"
-									mold="select"
-									visible="${each.type eq 'STRING'}"
-									height="25px" >
-									<template name="model">
-										<listitem label="${each}" value="${each}" />
-									</template>
-								</listbox>
-				                <listbox selectedItem="@bind(each.value)"
-									visible="${each.type eq 'BOOLEAN'}"
-									mold="select"
-									height="25px" >
-									<listitem label="Ano" value="true" />
-									<listitem label="Ne" value="false" />
-								</listbox>
-				                <label value="@load(each.value)" visible="${each.type eq 'INTEGER'}" />
-			                </listcell>
-			                <listcell>
-			                	<button iconSclass="z-icon-check" hflex="min" width="20px" onClick="@command('updateCmd', config=each)" />
-			                </listcell>
-			            </listitem>
-			        </template>
-			    </listbox>
+			<vbox hflex="20" pack="center" >
+				<tabbox id="tb" hflex="1" style="margin-top: 20px;">
+				    <tabs id="tabs">
+				        <tab id="courseParticipants" label="${c:l('txt.ui.common.configBasic')}" />
+				        <tab id="lessons" label="${c:l('txt.ui.common.swimStyleAdmin')}"  />
+				    </tabs>
+				    <tabpanels>
+				    
+				    	<!-- Zakladni nastaveni -->
+				        <tabpanel viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.configuration.vm.ConfigVM')" >
+				        	<listbox model="@load(vm.configList)"
+								id="configList"
+								hflex="1"
+								mold="paging"
+								pageSize="10"
+								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+								class="listbox" >
+						        
+						        <listhead>
+						            <listheader label="${c:l('txt.ui.common.name')}" align="left" />
+						            <listheader label="${c:l('txt.ui.common.value')}" align="left" />
+						            <listheader width="50px" align="center" >
+						            	<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
+						            </listheader>
+						        </listhead>
+						         
+						        <template name="model">
+						            <listitem>
+						                <listcell label="${each.description}" />
+						                <listcell>
+					                		<listbox selectedItem="@bind(each.value)" 
+												model="@load(vm.courseYearList)"
+												mold="select"
+												visible="${each.type eq 'STRING'}"
+												height="25px" >
+												<template name="model">
+													<listitem label="${each}" value="${each}" />
+												</template>
+											</listbox>
+							                <listbox selectedItem="@bind(each.value)"
+												visible="${each.type eq 'BOOLEAN'}"
+												mold="select"
+												height="25px" >
+												<listitem label="Ano" value="true" />
+												<listitem label="Ne" value="false" />
+											</listbox>
+							                <label value="@load(each.value)" visible="${each.type eq 'INTEGER'}" />
+						                </listcell>
+						                <listcell>
+						                	<button iconSclass="z-icon-check" hflex="min" width="20px" onClick="@command('updateCmd', config=each)" />
+						                </listcell>
+						            </listitem>
+						        </template>
+						    </listbox>
+				        </tabpanel>
+				        
+				    	<!-- Administrace stylu -->
+				    	<tabpanel  viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.configuration.vm.SwimStyleAdminVM')">
+				    		<listbox model="@load(vm.codeListItemList)"
+								id="swimStyleList"
+								hflex="1"
+								mold="paging"
+								pageSize="10"
+								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+								class="listbox" >
+						        <auxhead>
+						            <auxheader class="header" colspan="3" >
+						            	<hbox hflex="1" height="42px" align="center" >
+							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+						            			<hbox vflex="1" align="center">
+						            				<label value="${c:l('txt.ui.common.styles')}" />
+						            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" style="margin-left: 10px;" />
+						            			</hbox>
+						            		</vbox>
+						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
+						            			<hbox>
+					            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
+												</hbox>
+											</vbox>
+										</hbox>
+						            </auxheader>
+						        </auxhead>
+						        
+						        <listhead>
+						            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" />
+						            <listheader label="${c:l('txt.ui.common.description')}" sort="auto(description)" align="left" />
+						            <listheader width="50px" align="center" />
+						        </listhead>
+						         
+						        <template name="model">
+						            <listitem>
+						                <listcell label="${each.name}" onDoubleClick="@command('detailCmd', item=each)" />
+						                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', item=each)" />                	
+						                <listcell>
+						                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}" />
+						                	<menupopup id="menuCourse_${each.uuid}" >
+												<menuitem label="Detail" onClick="@command('detailCmd', item=each)" />
+												<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)"  />
+									       	</menupopup>
+						                </listcell>
+						            </listitem>
+						        </template>
+						    </listbox>
+				    	</tabpanel>
+				    </tabpanels>
+				</tabbox>
 			</vbox>
 			
 			<vbox hflex="1" />
