--- a/scb-ui-zk/src/main/webapp/pages/secured/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ucastnik.zul
@@ -357,10 +357,10 @@
 										</auxhead>
 										
 								        <listhead>
-								            <listheader label="${c:l('txt.ui.common.style')}" sort="auto(name)" align="left" />
-								            <listheader label="${c:l('txt.ui.common.distance')}" sort="auto(description)" align="left" />
-								            <listheader label="${c:l('txt.ui.common.date')}" align="left" sort="auto(year)" />
-								            <listheader label="${c:l('txt.ui.common.resultTime')}" sort="auto(participantListCount)" align="left"  />
+								            <listheader label="${c:l('txt.ui.common.style')}" sort="auto(style.name)" align="left" />
+								            <listheader label="${c:l('txt.ui.common.distance')}" sort="auto(distance)" align="left" />
+								            <listheader label="${c:l('txt.ui.common.date')}" align="left" sort="auto(resultDate)" />
+								            <listheader label="${c:l('txt.ui.common.resultTime')}" sort="auto(resultTime)" align="left"  />
 								            <listheader width="50px" align="center" />
 								        </listhead>
 								         
