style delete validation, position of popup

--- a/scb-ui-zk/src/main/webapp/pages/common/template/navbar.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/navbar.zul
@@ -32,7 +32,7 @@
 				
 				<button label="@load(vm.loggedUserCompleteName)"
 					sclass="btn-info" iconSclass="z-icon-caret-down"
-					popup="loggedUserPopup"
+					popup="loggedUserPopup, position=after_end"
 					visible="@load(vm.isUserLogged())" />
 				
 				<!-- User menu -->
