--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
@@ -120,7 +120,7 @@
 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.courseParticipant.inCourseInfo()}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
 			                <listcell>
-			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}" />
+			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
 						       	</menupopup>
