--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
@@ -86,7 +86,7 @@
 			                <listcell label="${each.participantListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.lessonListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />	                	
 			                <listcell>
-			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}" />
+			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourse_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
 									<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)"  />
