--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
@@ -150,7 +150,7 @@
 		            		<listcell iconSclass="z-icon-check-circle" style="color: #87B87F; font-size: large;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.inCourseInfo()}" />
                 			<listcell visible="${!each.courseParticipant.inCourse()}" />
 			                <listcell>
-			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}" />
+			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
 									<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)"  />
