--- a/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
@@ -74,6 +74,15 @@
 				href="/pages/secured/seznam-ucastniku.zul" >
 			</menuitem>
 			
+			<!-- Seznam uzivatelu -->
+			<menuitem style="text-align: center; width: 100px;"
+				label="${c:l('txt.ui.menu.users')}" 
+				id="menu_userList"
+				iconSclass="z-icon-users" 
+				visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))"
+				href="/pages/secured/seznam-uzivatelu.zul" >
+			</menuitem>
+			
 			<!-- Nastaveni -->
 			<menuitem style="text-align: center; width: 100px;"
 				label="${c:l('txt.ui.menu.configuration')}" 
