--- a/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
@@ -89,8 +89,7 @@
 						            	<hbox hflex="1" height="42px" align="center" >
 							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 						            			<hbox vflex="1" align="center">
-						            				<label value="${c:l('txt.ui.common.styles')}" />
-						            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" style="margin-left: 10px;" />
+						            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
 						            			</hbox>
 						            		</vbox>
 						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
