shared pom, unexpeced exception handling, deleting items add info about record to question and confirmation info

--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-uzivatelu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-uzivatelu.zul
@@ -112,7 +112,7 @@
 			                	<menupopup id="menuCourse_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
 									<menuitem label="${c:l('txt.ui.common.resetPassword')}" onClick="@command('resetPwdCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)" visible="@load(vm.canDelete(each.uuid))"  />
+									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)" visible="@load(vm.canDelete(each.uuid))"  />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
