--- a/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
@@ -115,7 +115,7 @@
 						                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}, position=after_end" />
 						                	<menupopup id="menuCourse_${each.uuid}" >
 												<menuitem label="Detail" onClick="@command('detailCmd', item=each)" />
-												<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)"  />
+												<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)"  />
 									       	</menupopup>
 						                </listcell>
 						            </listitem>
