--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
@@ -38,8 +38,19 @@
 			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
 			            			</hbox>
 			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
-			            			<hbox>
+			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
+			            			<hbox vflex="1" pack="center" align="center">
+			            				<label value="${c:l('txt.ui.common.year')}:" style="margin-right: 5px;"/>
+			            				<listbox id="courseYear" 
+			            					selectedItem="@bind(vm.courseYearSelected)" 
+											onSelect="@command('courseYearChangeCmd')"
+											model="@load(vm.courseYearList)"
+											mold="select"
+											height="25px" >
+											<template name="model">
+			            						<listitem label="${each}" value="${each}" />
+			            					</template>
+										</listbox>
 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
 									</hbox>
@@ -88,7 +99,7 @@
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourse_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)"  />
+									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)"  />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
