--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
@@ -128,13 +128,13 @@
 					
 			        <listhead >
 			            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="left" sort="auto(courseParticipant.personalNo)" />
+			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" hflex="min" />
+			            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="left" sort="auto(courseParticipant.personalNo)" hflex="min" />
 			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" />
 			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" />
-			            <listheader label="V kurzu" align="center" width="57px" />
+			            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" hflex="min" />
+			            <listheader label="${c:l('txt.ui.common.inCourse')}" align="center" width="57px" />
 			            <listheader width="50px" align="center" />
 			        </listhead>
 			         
@@ -149,6 +149,7 @@
 			                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
 		            		<listcell iconSclass="z-icon-check-circle" style="color: #87B87F; font-size: large;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.getInCourseInfo()}" />
                 			<listcell visible="${!each.courseParticipant.inCourse()}" />
+                			
 			                <listcell>
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
