--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
@@ -37,7 +37,7 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="7" >
+			            <auxheader class="header" colspan="8" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox>
@@ -106,6 +106,18 @@
 								onChange="@command('filterDomCmd')" />
 						</auxheader>
 						<auxheader class="filter">
+							<listbox selectedItem="@bind(vm.filter.payed)"
+								onSelect="@command('filterDomCmd')"
+								mold="select"
+								hflex="1"
+								model="@load(vm.booleanListItem)"
+								height="25px" >
+								<template name="model">
+									<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
+								</template>
+							</listbox>
+						</auxheader>
+						<auxheader class="filter">
 						</auxheader>
 					</auxhead>
 					
@@ -116,6 +128,7 @@
 			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.inCourseInfo)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.payed')}" sort="auto(payed)" align="center" hflex="min" />
 			            <listheader width="50px" align="center" />
 			        </listhead>
 			         
@@ -126,7 +139,11 @@
 			                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.courseParticRepresentative.contact.email1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.courseParticipant.getInCourseInfo()}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
+			                <listcell label="${each.courseParticipant.getInCourseInfo()}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+			                <listcell onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
+		            			<checkbox checked="@load(each.payed)"
+		            				onCheck="@command('updatePayedCmd', checked=self.checked, uuid=each.uuid)" />
+		            		</listcell>		                	
 			                <listcell>
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
