--- a/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/configuration.zul
@@ -5,7 +5,7 @@
 <zk>
 	<div self="@{define(mainContent)}" hflex="1" >
 		
-		<hlayout spacing="0">
+		<hlayout spacing="0" visible="false">
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center">
