--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
@@ -5,7 +5,7 @@
 <zk>
 	<div self="@{define(mainContent)}" hflex="1" >
 		
-		<hlayout spacing="0">
+		<hlayout spacing="0" visible="false">
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center">
@@ -31,10 +31,11 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="6" >
+			            <auxheader class="header" colspan="5" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox vflex="1" align="center">
+			            				<label value="${c:l('txt.ui.menu.courses')}" style="margin-right:5px;" />
 			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
 			            			</hbox>
 			            		</vbox>
@@ -75,14 +76,11 @@
 						</auxheader>
 						<auxheader class="filter">
 						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
 					</auxhead>
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.description')}" sort="auto(description)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.year')}" align="left" sort="auto(year)" />
 			            <listheader label="${c:l('txt.ui.common.participantCount')}" sort="auto(participantListCount)" align="left"  />
 			            <listheader label="${c:l('txt.ui.common.lessonPerWeekCount')}" sort="auto(lessonListCount)" align="left"  />
 			            <listheader width="140px" align="center" />
@@ -92,7 +90,6 @@
 			            <listitem>
 			                <listcell label="${each.name}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.year}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />	
 			                <listcell label="${each.participantListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.lessonListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />	                	
 			                <listcell>
