--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
@@ -11,7 +11,7 @@
 			<label value="${c:l('txt.ui.menu.application')}"/>
 		</div>
 		
-		<hlayout spacing="0">
+		<hlayout spacing="0" visible="false">
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center">
@@ -42,7 +42,7 @@
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox>
 				            			<vbox>
-				            				<label value="${c:l('txt.ui.common.courseParticipantList')}" />
+				            				<label value="${c:l('txt.ui.common.participants')}" />
 										</vbox>
 			            			</hbox>
 			            		</vbox>
