--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-uzivatelu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-uzivatelu.zul
@@ -5,7 +5,7 @@
 <zk>
 	<div self="@{define(mainContent)}" hflex="1" >
 		
-		<hlayout spacing="0">
+		<hlayout spacing="0" visible="false">
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center">
@@ -35,6 +35,7 @@
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox vflex="1" align="center">
+			            				<label value="${c:l('txt.ui.menu.users')}" style="margin-right:5px;" />
 			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
 			            			</hbox>
 			            		</vbox>
